# DungeonPlanner

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy-pages.yml  test.yml
app/: .env.example  README.md  eslint.config.js  index.html  package.json  vite.config.ts
app/convex/: accessPolicies.test.ts  accessPolicies.ts  actorPackMigration.test.ts  actorPackMigration.ts  actors.ts  auth.ts  characters.ts  crossOriginHttp.test.ts  crossOriginHttp.ts  devSeedAccounts.ts  dungeons.ts  errors.ts  helpers.ts  http.ts  model.ts  packs.ts  roleAccess.test.ts  roleAccess.ts  roles.ts  schema.ts  seed.ts  seedState.ts  sessions.ts  tsconfig.json  users.ts  workspaceProvisioning.ts
app/public/: privacy-cookie-policy.html  styles.css
app/scripts/: generate-convex-auth-keys.mjs
app/shared/: contentRefs.test.ts  contentRefs.ts
app/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
docs/: TODO.md  architecture.md  content-packs.md  developers.md  store.md  ui.md
editor/: eslint.config.js  package.json  tsconfig.app.json  vite.config.ts
editor/src/: App.test.tsx  App.tsx  RootApp.tsx  ThumbnailRendererApp.tsx  env.d.ts  rotationShortcuts.test.ts
scripts/: build-docs-site.mjs  generate-core-pack.mjs  generate-thumbnails.mjs  import-models.mjs  model-packs.config.mjs  model-pipeline.mjs  optimize-models.mjs  run-character-generator-utils.mjs  run-character-generator-utils.test.ts  run-character-generator.mjs  run-vite-package.mjs  seed-authenticated-app-utils.d.ts  seed-authenticated-app-utils.mjs  seed-authenticated-app-utils.test.ts  seed-authenticated-app.mjs  setup-authenticated-app-utils.mjs  setup-authenticated-app-utils.test.ts  setup-authenticated-app.mjs  setup-certs.sh  sync-ktx2-transcoders.mjs
server/: package-lock.json  package.json
server/src/: appFacade.ts  authFacade.ts  generatedCharacterStorage.ts  index.ts  sessionAccess.ts
shared/: editorAccess.ts  package.json
shared/src/: actors.ts
src/: App.test.tsx  App.tsx  ThumbnailRendererApp.tsx  index.css  rotationShortcuts.ts
tools/character-generator/: .gitignore  README.md  pyproject.toml
tools/character-generator/examples/: base-prompt.txt  character-config.yaml  kins.txt  professions.txt  traits.txt  zombie-character-config.yaml
tools/character-generator/src/character_generator/: __init__.py  cli.py  config.py  image_ops.py  inference.py  inputs.py  model_cache.py  naming.py  pack_output.py  pipeline.py  runtime.py  types.py
tools/character-generator/tests/: test_image_ops.py  test_inference.py  test_inputs.py  test_model_cache.py  test_naming.py  test_pack_output.py  test_pipeline.py  test_runtime.py
web/: index.html  privacy-cookie-policy.html  styles.css
(+2945 files in other folders)
