[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "character-generator"
version = "0.1.0"
description = "Batch-generate Dragonbane character portraits with Z-Image-Turbo, face detection, and background removal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate==1.13.0",
  "diffusers==0.37.1",
  "huggingface-hub==1.12.0",
  "numpy==2.4.4",
  "pillow==12.2.0",
  "pyyaml==6.0.3",
  "sdnq @ git+https://github.com/Disty0/sdnq.git@bcf63fe8e6c669f01edbf6b97f6962c7f5c40a4f",
  "torch==2.11.0",
  "torchvision==0.26.0",
  "transformers==5.6.2",
  "ultralytics==8.4.41",
]

[project.optional-dependencies]
test = ["pytest==9.0.3"]

[project.scripts]
character-generator = "character_generator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
